Bug 417823 - Unknown fate of multiple files shared from device to desktop
Summary: Unknown fate of multiple files shared from device to desktop
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 1.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords: usability
: 445482 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-18 11:00 UTC by Szczepan Hołyszewski
Modified: 2021-11-16 17:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szczepan Hołyszewski 2020-02-18 11:00:43 UTC
SUMMARY

When I "share" something from Android device to paired desktop machine with KDE Connect, NothingApparentlyHappens™ on the desktop end. There is no notification. There is no information how to retrieve the shared object.


STEPS TO REPRODUCE
1. Take screenshot on an Android 9 device.
2. Via screenshot notification on the device, choose share using -> KDE Connect
3. Choose paired desktop to share with.

OBSERVED RESULT

There is a notification on the phone that the screenshot was successfully shared, but no corresponding notification appears on the desktop. The file is silently saved under ~/Downloads.

EXPECTED RESULT

A notification on the desktop machine should be shown, disclosing the location of the file and offering relevant actions like opening the file, opening its location in file manager, copying contents to clipboard as appropriate media type, etc.

SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Kernel Version: 5.5.4-arch1-1
OS Type: 64-bit
Processors: 8 × AMD FX(tm)-8320 Eight-Core Processor
Memory: 15,6 GiB

ADDITIONAL INFORMATION

As a log of my user experience, here are the things that I tried before I successfully located the screenshot on my desktop box:

1. Ctrl+V - perhaps the image data landed in the clipboard?
2. Open GIMP, Ctrl+Shift+V - perhaps the app I was trying to paste into wouldn't directly accept an image paste?
3. Check under ~/Pictures/screenshots
4. Check ~/Pictures/Screenshot_*.png, order by mtime in Dolphin to find the newest one
5. Finally check ~/Downloads/Screenshot_*.png - YEAH, THIS IS IT.

Actually at step 5 I had two ideas: check in ~/Downloads, which I did, or check in KDE Connect configuration. If the save directory were something I wouldn't be able to guess, I might have tried several more directories before I would go to the configuration.

I realize that the output location is configurable and also problably documented, but as a user I would like the app to just "serve" me without me having to check documentation or configuration. I believe the workflow of sharing stuff between devices should be as streamlined as possible, without requiring any knowledge from the user beyond the immediate intention. In real life, when you share something with someone you are directly interacting with, you just hand them the thing, they see the thing, and they grab the thing. You don't silently go to their bag and put the thing in one of the compartments without saying anything.
Comment 1 Nate Graham 2020-02-18 22:46:53 UTC
Agreed. It should have buttons for "Open" and "Open Containing Folder".
Comment 2 Nicolas Fella 2020-02-19 23:54:52 UTC
There is such a notification, but Plasma suppresses it for very short transfers (otherwise you'd get tons of notifications for simple file stuff in Dolphin). What we need is a way to tell Plasma to always show such a notification in our case, which is something we've discussed but not yet implemented
Comment 3 Nate Graham 2020-02-20 00:12:59 UTC
I don't know if that's the problem. Even when the notification is shown because the file transfer takes more than 500ms, once the transfer is finished, the notification  doesn't have any buttons on it to show you where the file is or let you open it. See also Bug 416807.
Comment 4 Nicolas Fella 2020-03-17 16:24:39 UTC
The notification not having an open button should be fixed with https://cgit.kde.org/kdeconnect-kde.git/commit/?id=5da0ae7903d69c999904dcfb444008494052ff3c
Comment 5 Nate Graham 2020-03-17 18:58:26 UTC
Turns out that I was using an old version of the host software, and after building everything from source and rebooting for good measure, I can see an "Open" button for the notification for single files. However when I've transferred multiple files, the notification doesn't show an "open containing folder" button like it should.
Comment 6 Szczepan Hołyszewski 2021-06-22 17:06:24 UTC
At this point I am receiving NO notification at all when I share from phone to desktop. The phone says it shared (there's a notification), but the file falls into a bottomless pit and gets eaten by a grue.
Comment 7 Nicolas Fella 2021-11-16 12:31:54 UTC
*** Bug 445482 has been marked as a duplicate of this bug. ***
Comment 8 Bug Janitor Service 2021-11-16 12:33:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/432
Comment 9 Nicolas Fella 2021-11-16 12:47:27 UTC
Git commit 4444b4d3731a140a2d4e4bf87232797d55bcc69b by Nicolas Fella.
Committed on 16/11/2021 at 12:32.
Pushed by nicolasfella into branch 'master'.

Always show notification when receiving files

Otherwise we get no notification for very short transfers

M  +1    -0    plugins/share/shareplugin.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/4444b4d3731a140a2d4e4bf87232797d55bcc69b
Comment 10 Nicolas Fella 2021-11-16 17:47:20 UTC
Git commit 1f3c9399c3b1e80c0c3a4bfa55870797bfdf8980 by Nicolas Fella.
Committed on 16/11/2021 at 17:46.
Pushed by nicolasfella into branch 'release/21.12'.

Always show notification when receiving files

Otherwise we get no notification for very short transfers
(cherry picked from commit 4444b4d3731a140a2d4e4bf87232797d55bcc69b)

M  +1    -0    plugins/share/shareplugin.cpp

https://invent.kde.org/network/kdeconnect-kde/commit/1f3c9399c3b1e80c0c3a4bfa55870797bfdf8980