Always show notification when receiving files

Otherwise we get no notification for very short transfers

BUG: 417823
(cherry picked from commit 4444b4d3731a140a2d4e4bf87232797d55bcc69b)