plugins/share/shareplugin.cpp
@@ -113,6 +113,7 @@ bool SharePlugin::receivePacket(const NetworkPacket& np)
             if (!m_compositeJob) {
                 m_compositeJob = new CompositeFileTransferJob(device()->id());
                 m_compositeJob->setProperty("destUrl", destinationDir().toString());
+                m_compositeJob->setProperty("immediateProgressReporting", true);
                 KIO::getJobTracker()->registerJob(m_compositeJob);
             }
 
